# SharajaApp

./: .gitignore  README.md  package-lock.json  package.json
backend/: poetry.toml  pyproject.toml
backend/src/: main.py
client/src/: App.tsx
client/src/components/: ai-chat.tsx  journal-editor.tsx  journal-list.tsx  journal-viewer.tsx  mood-tracker.tsx  recommendations.tsx
client/src/pages/: auth-page.tsx  circles-page.tsx  home-page.tsx
server/: huggingface.ts  openai.ts  routes.ts  storage.ts
shared/: schema.ts
