[tool.poetry]
name = "sharajaapp"
version = "0.1.0"
description = "Sharaja mobile application backend service for personal journaling"
authors = ["eduoke <edu_oke@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
bcrypt = "^4.1.3"
pyjwt = "^2.8.0"
alembic = "^1.13.2"
sqlalchemy = "^2.0.31"
psycopg2-binary = "^2.9.9"
email-validator = "^2.2.0"
pydantic-settings = "^2.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
