[tool.poetry]
name = "sharajaapp"
version = "0.1.0"
description = "Sharaja mobile application backend service for personal journaling"
authors = ["eduoke <edu_oke@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
bcrypt = "^4.1.3"
pyjwt = "^2.8.0"
alembic = "^1.13.2"
sqlalchemy = "^2.0.31"
psycopg2-binary = "^2.9.9"
email-validator = "^2.2.0"
pydantic-settings = "^2.3.4"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.1"
mypy = "^1.10.1"
pre-commit = "^3.7.1"

[tool.ruff]
line-length=79
target-version = 'py312'

[tool.ruff.lint]
select = [
  # Pyflakes
  "F",
  # pycodestyle
  "E4",
  "E7",
  "E9",
  # isort
  "I",
  # pep8-naming
  "N",
]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "./src/"
allow_untyped_globals = true
check_untyped_defs = true
disallow_any_decorated = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
ignore_missing_imports = false
show_error_codes = true
warn_return_any = true
warn_unused_configs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
